4/25/11 #77, restore zoom level when switching between well types
# 1.08.00 (51129) Apr 25, 2011
# 1.07.02 (51023) Apr 21, 2011
> added new translation credits features
# 1.07.01 (51017) Apr 21, 2011
5/4/10 replace BSAbstractHandle.HighlightHandler with piccolo-phet's PaintHighlightHandler
# 1.07.00 (40180) Apr 28, 2010
4/28/10 > restore the time value display
# 1.06.01 (40144) Apr 27, 2010
4/20/10 #2264, restore the time value display that was removed somewhere between versions 1.03 and 1.04
# 1.06.00 (37972) Jan 8, 2010
1/8/10 public version for milestone "full redeploy, 2010 Q1"
# 1.05.02 (37599) Dec 18, 2009
12/18/09 fix for #1283, restore potential drag handles on Load
# 1.05.01 (37337) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
8/19/09 migrate Complex and MutableComplex to phetcommon
# 1.05.00 (30589) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30588
# 1.04.04 (30218) Apr 2, 2009
4/2/09 Deploying to test ticket #1487
# 1.04.03 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
3/12/09 #1453, remove unused strings from English localization file
3/9/09 #1289, change tooltip to "Restart" on clock rewind button
2/25/09 - #1283, fix save/load
# 1.04.02 (28778) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 1.04.01 (26387)
11/20/08 - #988, dialogs should remember where they were last positioned
11/20/08 - #988, dialogs not centered in parent when opened for the first time
11/20/08 - #76, pressing "Configure Potential" button with wells=1 opens an empty dialog
11/17/08 - #75, separation handles should not be visible when #wells=1
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - moved list of rejected features to Unfuddle 793
9/5/08 - remove uses of DialogUtils, use JOptionPane directly
5/20/08 - replace Font with PhetFont throughout
# 1.04.00 (21058)
# 1.03.03 (21046)
4/28/08 - reduce vertical spacing between sub-control panels to zero