@@ -1,4 +1,6 @@
-4/25/11 #77, restore zoom level when switching between well types
+> reset chart magnification when pressing Reset All button
+> restore chart magnification when switching between well types
+4/25/11 #77, restore zoom level when switching between well types, reset zoom levels on Reset All
 # 1.08.00 (51129) Apr 25, 2011
 # 1.07.02 (51023) Apr 21, 2011
 > added new translation credits features
